Change library location

--- a/template/index.html
+++ b/template/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <head>
-    <script src="../two.js/build/two.js"></script>
+    <script defer src="/assets/lib/two.min.js"></script>
+    <script defer src="main.js"></script>
 </head>
 <body>
-    <script src="main.js"></script>
+
+
 </body>
